--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p class="First-Class">Number 1 - I'm a class!</p>
+    <p class="odd">Number 1 - I'm a class!</p>
     <div id="First-ID">Number 2 - I'm one ID.</div>
-    <p class="Second-Class">Number 3 - I'm a class, but cooler!</p>
+    <p class="odd adjust-font-size">Number 3 - I'm a class, but cooler!</p>
     <div id="Second-ID">Number 4 - I'm another ID.</div>
-    <p class="Third-Class">Number 5 - I'm a class!</p>
+    <p class="odd">Number 5 - I'm a class!</p>
   </body>
 </html>
